Create and implement ShortResponseDto & yachts/all endpoint